// Copyright 2020 Grafana Labs
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package worldping;

option go_package = "worldping";

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service Checks {
	// RegisterProbe causes this probe to be reported as online with
	// worldping-api.
	//
	// The probe is identified via an authentication token provided
	// in a different channel by worldping-api.
	rpc RegisterProbe(Void) returns (RegisterProbeResult) {};

	// GetChanges returns a list of check operations, specifying
	// whether to add, update or delete checks.
	rpc GetChanges(Void) returns (stream CheckChange) {};
}

// Void is an empty message used by RPC methods that don't take
// arguments.
message Void {
}

enum StatusCode {
	OK               = 0;
	NOT_FOUND        = 1;
	INVALID_ARGUMENT = 2;
	ALREADY_EXISTS   = 3;
	INTERNAL_ERROR   = 4;
	NOT_AUTHORIZED   = 5;
}

message Status {
	StatusCode code    = 1;
	string     message = 2;
}

message RegisterProbeResult {
	Probe  probe  = 1 [(gogoproto.nullable) = false];
	Status status = 2 [(gogoproto.nullable) = false];
}

// Probe represents a probe
message Probe {
	int64          id        = 1 [(gogoproto.jsontag) = "id"];                                   // ID of the probe, assigned by the API
	int64          tenantId  = 2 [(gogoproto.jsontag) = "tenantId"];                             // ID of the worldping tenant this probe belongs to
	string         name      = 3 [(gogoproto.jsontag) = "name"];                                 // name of the probe
	float          latitude  = 5 [(gogoproto.jsontag) = "latitude"];                             // latitude of the probe
	float          longitude = 6 [(gogoproto.jsontag) = "longitude"];                            // longitude of the probe
	repeated Label labels    = 8 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "labels"]; // probe-specific labels applied to all metrics and events
}

service Tenants {
	// GetTenant returns the details of the specified tenant
	rpc GetTenant(TenantInfo) returns (Tenant) {};
}

message TenantInfo {
	int64 id = 1;
}

// Tenant represents a user of worldping
message Tenant {
	int64           id            = 1   [(gogoproto.jsontag) = "id"];            // unique ID
	int64           orgId         = 2   [(gogoproto.jsontag) = "orgId"];         // grafana.com orgId
	RemoteInfo      metricsRemote = 3   [(gogoproto.jsontag) = "metricsRemote"]; // target to send metrics to
	RemoteInfo      eventsRemote  = 4   [(gogoproto.jsontag) = "eventsRemote"];  // target to send events to
	double          created       = 100 [(gogoproto.jsontag) = "created"];       // time the check was created
	double          modified      = 101 [(gogoproto.jsontag) = "modified"];      // last time modified
}

// RemoteInfo represents a target to send metrics or events to
message RemoteInfo {
	string name     = 1 [(gogoproto.jsontag) = "name"];     // instance name
	string url      = 2 [(gogoproto.jsontag) = "url"];      // instance URL
	string username = 3 [(gogoproto.jsontag) = "username"]; // username (instanceId)
	string password = 4 [(gogoproto.jsontag) = "password"]; // password (publisher API key)
}

enum CheckOperation {
	CHECK_ADD    = 0;
	CHECK_UPDATE = 1;
	CHECK_DELETE = 2;
}

message CheckChange {
	CheckOperation operation = 1;
	Check          check     = 2 [(gogoproto.nullable) = false];
}

message Label {
	string name  = 1 [(gogoproto.jsontag) = "name"];
	string value = 2 [(gogoproto.jsontag) = "value"];
}

// Check represents a check.
//
// The "settings" field defines the type of check.
message Check {
	int64           id        = 1   [(gogoproto.jsontag) = "id"];                                     // unique ID
	int64           tenantId  = 2   [(gogoproto.jsontag) = "tenantId"];                               // Worldping tenant
	int64           frequency = 3   [(gogoproto.jsontag) = "frequency"];                              // every X milliseconds
	int64           offset    = 4   [(gogoproto.jsontag) = "offset"];                                 // ??? REMOVE???? ??? why user configured?
	int64           timeout   = 5   [(gogoproto.jsontag) = "timeout"];                                // maximum time before aborting
	bool            enabled   = 6   [(gogoproto.jsontag) = "enabled"];                                // user enable/disable   
	repeated Label  labels    = 7   [(gogoproto.nullable) = false, (gogoproto.jsontag) = "labels"];   // Custom labels applied to all metrics and events (ie: production)
	CheckSettings   settings  = 8   [(gogoproto.nullable) = false, (gogoproto.jsontag) = "settings"];
	repeated int64  probes    = 9   [(gogoproto.jsontag) = "probes"];                                 // list of probes where this check should run
	string          target    = 10  [(gogoproto.jsontag) = "target"];                                 // endpoint that this check is targeting
	string          job       = 11  [(gogoproto.jsontag) = "job"];                                    // name of job this check belongs to
	double          created   = 100 [(gogoproto.jsontag) = "created"];                                // time the check was created
	double          modified  = 101 [(gogoproto.jsontag) = "modified"];                               // last time modified
}

// CheckSettings provides the settings for exactly one type of check.
message CheckSettings {
	option (gogoproto.onlyone) = true;
	PingSettings ping = 1 [(gogoproto.jsontag) = "ping,omitempty"];
	HttpSettings http = 2 [(gogoproto.jsontag) = "http,omitempty"];
	DnsSettings  dns  = 3 [(gogoproto.jsontag) = "dns,omitempty"];
}

// PingSettings provides the settings for a ping check.
//
// "hostname" is the hostname to check.
// "ipVersion" is the IP version to use in the IP layer.
message PingSettings {
	IpVersion  ipVersion       = 2 [(gogoproto.jsontag) = "ipVersion"];
	string     sourceIpAddress = 3 [(gogoproto.jsontag) = "sourceIpAddress,omitempty"];
	int64      payloadSize     = 4 [(gogoproto.jsontag) = "payloadSize,omitempty"];
	bool       dontFragment    = 5 [(gogoproto.jsontag) = "dontFragment"];
}

enum HttpMethod {
	GET     = 0;
	CONNECT = 1;
	DELETE  = 2;
	HEAD    = 3;
	OPTIONS = 4;
	POST    = 5;
	PUT     = 6;
	TRACE   = 7;
}

// HttpSettings provides the settings for a HTTP check.
message HttpSettings {
	HttpMethod            method                       = 2  [(gogoproto.jsontag) = "method"];
	repeated string       headers                      = 3  [(gogoproto.jsontag) = "headers,omitempty"];
	string                body                         = 4  [(gogoproto.jsontag) = "body,omitempty"];
	IpVersion             ipVersion                    = 5  [(gogoproto.jsontag) = "ipVersion"];
	bool                  noFollowRedirects            = 6  [(gogoproto.jsontag) = "noFollowRedirects"];

	// validations

	bool                  failIfSSL                    = 7  [(gogoproto.jsontag) = "failIfSSL"];
	bool                  failIfNotSSL                 = 8  [(gogoproto.jsontag) = "failIfNotSSL"];
	repeated int32        validStatusCodes             = 9  [(gogoproto.jsontag) = "validStatusCodes,omitempty"];
	repeated string       validHTTPVersions            = 10 [(gogoproto.jsontag) = "validHTTPVersions,omitempty"];
	repeated string       failIfBodyMatchesRegexp      = 11 [(gogoproto.jsontag) = "failIfBodyMatchesRegexp,omitempty"];
	repeated string       failIfBodyNotMatchesRegexp   = 12 [(gogoproto.jsontag) = "failIfBodyNotMatchesRegexp,omitempty"];
	repeated HeaderMatch  failIfHeaderMatchesRegexp    = 13 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "failIfHeaderMatchesRegexp,omitempty"];
	repeated HeaderMatch  failIfHeaderNotMatchesRegexp = 14 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "failIfHeaderNotMatchesRegexp,omitempty"];
}

message HeaderMatch {
	string header       = 1 [(gogoproto.jsontag) = "header,omitempty"];
	string regexp       = 2 [(gogoproto.jsontag) = "regexp,omitempty"];
	bool   allowMissing = 3 [(gogoproto.jsontag) = "allowMissing,omitempty"];
}

enum DnsRecordType {
	ANY   = 0;
	A     = 1;
	AAAA  = 2;
	CNAME = 3;
	MX    = 4;
	NS    = 5;
	PTR   = 6;
	SOA   = 7;
	SRV   = 8;
	TXT   = 9;
}

enum DnsProtocol {
	TCP = 0;
	UDP = 1;
}

message DNSRRValidator {
	repeated string failIfMatchesRegexp    = 1 [(gogoproto.jsontag) = "failIfMatchesRegexp,omitempty"];
	repeated string failIfNotMatchesRegexp = 2 [(gogoproto.jsontag) = "failIfNotMatchesRegexp,omitempty"];
}

// DnsSettings provides the settings for a DNS check.
//
// The way blackbox-exporter works, a DNS check tests a _server_, so the
// _target_ of the check is a server address, and the check itself
// contains the record to check.
message DnsSettings {
	string           server             = 2  [(gogoproto.jsontag) = "server"];
	int32            port               = 3  [(gogoproto.jsontag) = "port"];
	DnsRecordType    recordType         = 4  [(gogoproto.jsontag) = "recordType"];
	DnsProtocol      protocol           = 5  [(gogoproto.jsontag) = "protocol"];
	IpVersion        ipVersion          = 6  [(gogoproto.jsontag) = "ipVersion"];
	string           sourceIpAddress    = 7  [(gogoproto.jsontag) = "sourceIpAddress,omitempty"];

	// validations

	repeated string  validRCodes        = 8  [(gogoproto.jsontag) = "validRCodes,omitempty"];
	DNSRRValidator   validateAnswer     = 9  [(gogoproto.jsontag) = "validateAnswerRRS,omitempty"];
	DNSRRValidator   validateAuthority  = 10 [(gogoproto.jsontag) = "validateAuthorityRRS,omitempty"];
	DNSRRValidator   validateAdditional = 11 [(gogoproto.jsontag) = "validateAditionalRRS,omitempty"];
}

enum IpVersion {
	Any = 0;
	V4  = 1;
	V6  = 2;
}
